Fix result image align

--- a/front-end/style.css
+++ b/front-end/style.css
@@ -276,22 +276,21 @@
 }
 
 .im {
+  aspect-ratio: 4/3;
   object-fit: cover;
   object-position: 50% 50%;
-  width: 100%;
-  /* height: 75%; */
+  max-width: 100%;
+  max-height: 75%;
 }
 
 .mask {
+  width: 100%;
   mask-size: contain;
   -webkit-mask-size: contain;
-  max-width: 100%;
-  max-height: 100%;
   mask-image: url(assets/imageframe.png);
   -webkit-mask-image: url(assets/imageframe.png);
   mask-repeat: no-repeat;
   -webkit-mask-repeat: no-repeat;
-  /* mask-size: 100%; */
 }
 
 .pagination {
